# Data-Storyteller

./: README.md  start_backend.bat  start_frontend.bat
Backend/: README.md  db.sqlite3  pyproject.toml
Backend/core/: settings.py  urls.py
Backend/dashboard/: chart_generator.py  pandas_utils.py  urls.py  views.py
frontend/: components.json  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/charts/: ChartControls.tsx  ChartErrorBoundary.tsx  ChartGallery.tsx  DataChart.tsx  PlotlyChart.tsx  chart-config.ts
frontend/src/components/layout/: AppSidebar.tsx
frontend/src/components/ui/: sidebar.tsx  slider.tsx
frontend/src/context/: FileContext.tsx
frontend/src/pages/: DashboardView.tsx  LandingView.tsx
